fix: overflow in the subscribe__button

--- a/css/style.css
+++ b/css/style.css
@@ -887,8 +887,10 @@ template {
 }
 
 .subscribe__button {
+  word-break: break-all;
   position: absolute;
   min-width: 65px;
+  max-width: 65px;
   right: 0;
   top: 0;
   height: 100%;
