--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -53,8 +53,10 @@
     padding-left: 33px
     padding-right: 75px
   &__button
+    word-break: break-all
     position: absolute
     min-width: 65px
+    max-width: 65px
     right: 0
     top: 0
     height: 100%
